2007-06-02  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-dnd.c
	* app/widgets/gimpitemtreeview.c
	* app/widgets/gimpchanneltreeview.c: set the "linked" property of
	newly dropped items to FALSE.

	* app/widgets/gimptoolbox-dnd.c (gimp_toolbox_drop_drawable):
	stylistic cleanup.

2007-06-01  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpperspectiveclonetool.c: commented out debug output.

2007-06-01  Sven Neumann  <sven@gimp.org>

	* libgimpcolor/Makefile.am
	* libgimpcolor/gimpcolor.h
	* libgimpcolor/gimpcolortypes.h
	* libgimpcolor/gimpcolormanaged.[ch]: added an interface that will
	be used to implement the missing bits of color management.

	* libgimpcolor/gimpcolor.def: updated.

2007-06-01  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/Makefile.am: changed back to using EXTRA_PROGRAMS.

2007-05-31  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/test-preview-area.c: minor improvements.

2007-05-31  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/Makefile.am: build test-preview-area to avoid bit
	rot.

	* libgimpwidgets/test-preview-area.c: fixed compilation.

2007-05-31  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.c: unified progress strings.

2007-05-31  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.c: minor code cleanup.

2007-05-31  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/queue.c:  allocate structs using GSlice.

2007-05-31  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/Lighting/lighting_ui.c
	* plug-ins/FractalExplorer/Dialogs.c: Specify maximum field width in
	fscanf() to avoid buffer overflows.

2007-05-31  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/gfig/gfig.c: Specify maximum field width in sscanf() to
	avoid buffer overflows.

2007-05-31  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/spheredesigner.c: Don't write to an uninitialized
	pointer (end).

2007-05-31  Mukund Sivaraman  <muks@mukund.org>
